# my_bot

./: CMakeLists.txt  package.xml
config/: amcl.yaml  base_driver.yaml  gz_bridge.yaml  gz_bridge_base.yaml  gz_bridge_base_lidar.yaml  gz_bridge_camera.yaml  gz_bridge_lidar.yaml  nav2_params.yaml  nav2_params10.yaml  slam_toolbox.yaml  slam_toolbox_full.yaml
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: delete_sim_localization3.launch.py  launch_sim.launch.py  launch_sim_oldest.launch.py  pi_cam.launch.py  real_base.launch.py  real_camera.launch.py  real_drive_base.launch.py  real_drive_camera.launch.py  real_drive_full.launch.py  real_drive_lidar.launch.py  real_drive_slam.launch.py  real_drive_teleop.launch.py  real_lidar.launch.py  real_lidar_camera.launch.py  real_localization.launch.py  rplidar_a1.launch.py  rsp.launch.py  sim_camera.launch.py  sim_camera_teleop.launch.py  sim_full.launch.py  sim_lidar.launch.py  sim_lidar_camera.launch.py  sim_lidar_teleop.launch.py  sim_localization.launch.py  sim_localization2.launch.py  sim_nav.launch.py  sim_nav10.launch.py  sim_nav14.launch.py  sim_nav_only10.launch.py  sim_nav_only14.launch.py  sim_slam.launch.py  sim_slam2.launch.py  sim_spawn_only.launch.py  sim_teleop.launch.py  teleop.launch.py
rviz/: nav2_view.rviz  view.rviz  view_odom.rviz  view_odom_lidar.rviz  view_real_lidar.rviz
scripts/: diff_drive_base.py  wait_for_sim_ready.py
worlds/: living_room.sdf
