<?xml version="1.0"?>
<package format="3">
  <name>my_bot</name>
  <version>0.1.0</version>
  <description>ROS 2 package for my differential-drive robot.</description>
  <maintainer email="sean_mackenzie@ucsb.edu">Sean Mackenzie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>